Fixes #29736 by forcing visibility:visible as ext, for some unknown reason, thinks this is supposed to be visible:hidden. reviewed by pbowman.
git-svn-id: http://dev.zenoss.com/svnint/trunk/core@52430 f5df01ce-0320-0410-9ed9-ddcd13c732cc

--- a/Products/ZenUI3/browser/resources/css/zenoss.css
+++ b/Products/ZenUI3/browser/resources/css/zenoss.css
@@ -1443,3 +1443,6 @@ a.z-entity:link, a.z-entity:hover, a.z-entity:visited {
     position:absolute;
     margin-right:3px !important;
 }
+.prioritycombo input{
+    visibility:visible !important;
+}
